[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerodb-celery"
version = "0.1.0"
description = "Celery broker + result backend powered by ZeroDB. Replace Redis/RabbitMQ with one line — zero infrastructure, auto-provisioned."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "AINative Studio", email = "hello@ainative.studio" },
]
keywords = [
    "celery",
    "celery-backend",
    "celery-broker",
    "task-queue",
    "redis-alternative",
    "rabbitmq-alternative",
    "zerodb",
    "ainative",
    "auto-provisioning",
    "background-jobs",
    "python",
    "ai-pipeline",
    "ml-pipeline",
    "event-driven",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Celery",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "celery>=5.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/zerodb-celery"
Documentation = "https://docs.ainative.studio"
Repository = "https://github.com/AINative-Studio/zerodb-celery"
Issues = "https://github.com/AINative-Studio/zerodb-celery/issues"

[tool.hatch.build.targets.wheel]
packages = ["zerodb_celery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
